--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,22 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
-    <string name="menu_slideshow">Slideshow</string>
+    <string name="menu_api">API</string>
+    <string name="menu_camera">Camera</string>
+    <string name="menu_swipe">Swipe</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+
+    <!-- Preference Titles -->
+    <string name="customization_header">Customization</string>
+
+    <!-- Customization Preferences -->
+    <string name="theme_key" translatable="false">theme</string>
+    <string name="theme_title">Theme</string>
+    <string name="theme_dialog_title">Choose theme</string>
+    <string name="dark_theme_value" translatable="false">dark</string>
+    <string name="light_theme_value" translatable="false">light</string>
+    <string name="system_theme_value" translatable="false">system</string>
+    <string name="dark_theme_entry">Dark</string>
+    <string name="light_theme_entry">Light</string>
+    <string name="system_theme_entry">System default</string>
 </resources>
