--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -26,4 +26,9 @@
     <string name="dark_theme_entry">Dark</string>
     <string name="light_theme_entry">Light</string>
     <string name="system_theme_entry">System default</string>
+
+    <!-- Camera -->
+    <string name="take_photo">Take Photo</string>
+    <string name="start_capture">Start Capture</string>
+    <string name="stop_capture">Stop Capture</string>
 </resources>
