--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -27,6 +27,9 @@
     <string name="light_theme_entry">Light</string>
     <string name="system_theme_entry">System default</string>
 
+    <!-- API -->
+    <string name="fetch_joke">Fetch Joke</string>
+
     <!-- Camera -->
     <string name="take_photo">Take Photo</string>
     <string name="start_capture">Start Capture</string>
