--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,9 @@
 
     <string name="menu_api">API</string>
     <string name="menu_camera">Camera</string>
+    <string name="menu_gps">GPS</string>
     <string name="menu_swipe">Swipe</string>
+    <string name="menu_wifi_direct">Wifi Direct</string>
     <string name="title_activity_settings">SettingsActivity</string>
 
     <!-- Preference Titles -->
@@ -34,4 +36,7 @@
     <string name="take_photo">Take Photo</string>
     <string name="start_capture">Start Capture</string>
     <string name="stop_capture">Stop Capture</string>
+
+    <!-- GPS -->
+    <string name="location_name">no location retrieved yet</string>
 </resources>
