--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="menu_notification">Notification</string>
     <string name="menu_qr">QR</string>
     <string name="menu_swipe">Swipe</string>
+    <string name="menu_text_recognition">Text Recognition</string>
     <string name="menu_wifi_direct">Wifi Direct</string>
     <string name="title_activity_settings">SettingsActivity</string>
 
@@ -41,6 +42,7 @@
     <string name="take_photo">Take Photo</string>
     <string name="start_capture">Start Capture</string>
     <string name="stop_capture">Stop Capture</string>
+    <string name="crop_image">Crop Image</string>
 
     <!-- GPS -->
     <string name="location_name">no location retrieved yet</string>
